@@ -1,5 +1,8 @@
 2005-08-27  Jakub Jelinek  <jakub@redhat.com>
 
+	PR rtl-optimization/23561
+	* gcc.c-torture/execute/20050826-1.c: New test.
+
 	PR rtl-opt/23560
 	* gcc.c-torture/execute/20050826-2.c: New test.
 
